--- a/MultiDirectionCollectionView/Base.lproj/Customviewboard2.xib
+++ b/MultiDirectionCollectionView/Base.lproj/Customviewboard2.xib
@@ -25,108 +25,66 @@
             <rect key="frame" x="0.0" y="0.0" width="285" height="288"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pcP-NY-tUo">
-                    <rect key="frame" x="145" y="92" width="140" height="25"/>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pcP-NY-tUo">
+                    <rect key="frame" x="141" y="92" width="140" height="25"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="New data">
                         <color key="titleColor" red="0.20000000000000001" green="0.40000000000000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="okp-xm-cxi">
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="okp-xm-cxi">
                     <rect key="frame" x="4" y="0.0" width="126" height="25"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="25" id="BO8-7V-izx"/>
-                    </constraints>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="Search"/>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AkM-DE-7L6">
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AkM-DE-7L6">
                     <rect key="frame" x="-1" y="49" width="143" height="25"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="25" id="EyS-0D-Ycr"/>
-                    </constraints>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="Text style"/>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x2D-Hd-mUz">
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="x2D-Hd-mUz">
                     <rect key="frame" x="150" y="0.0" width="124" height="25"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="Import"/>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lCK-kP-XA0">
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lCK-kP-XA0">
                     <rect key="frame" x="150" y="49" width="126" height="25"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="126" id="mke-ax-png"/>
-                    </constraints>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="Tutorial">
                         <color key="titleColor" red="1" green="0.19125069140000001" blue="0.12444555039999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MuS-sR-VDI">
-                    <rect key="frame" x="189" y="139" width="48" height="27"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="27" id="yXF-Vu-fV1"/>
-                    </constraints>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MuS-sR-VDI">
+                    <rect key="frame" x="150" y="139" width="126" height="27"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="Settings"/>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="0dO-3H-IDI">
-                    <rect key="frame" x="141" y="186" width="128" height="30"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                    <state key="normal" title="Export"/>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eit-4b-Vlp">
-                    <rect key="frame" x="30" y="186" width="72" height="94"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="72" id="hWh-fo-IpT"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                    <state key="normal" title="↩︎"/>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="TPE-jL-3nQ">
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="TPE-jL-3nQ">
                     <rect key="frame" x="55" y="92" width="31" height="30"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="gJv-zp-8CW"/>
-                    </constraints>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <state key="normal" title="Email"/>
                 </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Eit-4b-Vlp">
+                    <rect key="frame" x="30" y="186" width="72" height="94"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <state key="normal" title="↩︎"/>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="characterWrap" translatesAutoresizingMaskIntoConstraints="NO" id="0dO-3H-IDI">
+                    <rect key="frame" x="146" y="186" width="128" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <state key="normal" title="Export"/>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <constraints>
-                <constraint firstItem="x2D-Hd-mUz" firstAttribute="leading" secondItem="okp-xm-cxi" secondAttribute="trailing" constant="20" id="1dW-GE-OLN"/>
-                <constraint firstItem="AkM-DE-7L6" firstAttribute="baseline" secondItem="lCK-kP-XA0" secondAttribute="baseline" id="1kj-fS-YXX"/>
-                <constraint firstAttribute="trailing" secondItem="MuS-sR-VDI" secondAttribute="trailing" constant="48" id="2Rb-LT-116"/>
-                <constraint firstItem="MuS-sR-VDI" firstAttribute="top" secondItem="pcP-NY-tUo" secondAttribute="bottom" constant="22" id="2mZ-La-zwv"/>
-                <constraint firstItem="x2D-Hd-mUz" firstAttribute="leading" secondItem="lCK-kP-XA0" secondAttribute="leading" id="53U-4y-6jU"/>
-                <constraint firstAttribute="trailing" secondItem="pcP-NY-tUo" secondAttribute="trailing" id="5eS-V4-JqU"/>
-                <constraint firstItem="Eit-4b-Vlp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="30" id="6Kx-JC-OvM"/>
-                <constraint firstItem="TPE-jL-3nQ" firstAttribute="centerX" secondItem="Eit-4b-Vlp" secondAttribute="centerX" constant="4.5" id="7yx-2q-9Sx"/>
-                <constraint firstItem="okp-xm-cxi" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="topMargin" id="9Tx-lm-qc9"/>
-                <constraint firstItem="okp-xm-cxi" firstAttribute="firstBaseline" secondItem="x2D-Hd-mUz" secondAttribute="firstBaseline" id="BHd-I6-3Xh"/>
-                <constraint firstItem="TPE-jL-3nQ" firstAttribute="top" secondItem="MuS-sR-VDI" secondAttribute="top" constant="-47" id="Cgx-8W-61j"/>
-                <constraint firstItem="0dO-3H-IDI" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailingMargin" id="DZ8-ZY-ABa"/>
-                <constraint firstItem="okp-xm-cxi" firstAttribute="baseline" secondItem="x2D-Hd-mUz" secondAttribute="baseline" id="H3I-Ab-SB1"/>
-                <constraint firstAttribute="trailing" secondItem="x2D-Hd-mUz" secondAttribute="trailing" constant="11" id="KdT-BC-YZn"/>
-                <constraint firstAttribute="bottom" secondItem="Eit-4b-Vlp" secondAttribute="bottom" constant="8" id="Qoc-B1-A9A"/>
-                <constraint firstItem="AkM-DE-7L6" firstAttribute="top" secondItem="okp-xm-cxi" secondAttribute="bottom" constant="24" id="Vzr-WG-svu"/>
-                <constraint firstItem="0dO-3H-IDI" firstAttribute="top" secondItem="MuS-sR-VDI" secondAttribute="bottom" constant="20" id="ZOe-B0-fhy"/>
-                <constraint firstAttribute="trailing" secondItem="lCK-kP-XA0" secondAttribute="trailing" constant="9" id="dTb-jD-eaB"/>
-                <constraint firstAttribute="bottom" secondItem="0dO-3H-IDI" secondAttribute="bottom" constant="72" id="dmg-As-Dyi"/>
-                <constraint firstItem="pcP-NY-tUo" firstAttribute="top" secondItem="lCK-kP-XA0" secondAttribute="bottom" constant="18" id="fWd-7R-2sA"/>
-                <constraint firstItem="AkM-DE-7L6" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="-1" id="g4G-F6-WSS"/>
-                <constraint firstItem="0dO-3H-IDI" firstAttribute="leading" secondItem="Eit-4b-Vlp" secondAttribute="trailing" constant="39" id="hf9-Pp-VAn"/>
-                <constraint firstItem="lCK-kP-XA0" firstAttribute="centerX" secondItem="MuS-sR-VDI" secondAttribute="centerX" id="ibd-SH-4Kc"/>
-                <constraint firstAttribute="bottom" secondItem="MuS-sR-VDI" secondAttribute="bottom" constant="122" id="kMR-k1-ote"/>
-                <constraint firstItem="MuS-sR-VDI" firstAttribute="leading" secondItem="TPE-jL-3nQ" secondAttribute="trailing" constant="103" id="lAP-bb-0HQ"/>
-                <constraint firstItem="Eit-4b-Vlp" firstAttribute="top" secondItem="TPE-jL-3nQ" secondAttribute="bottom" constant="64" id="o73-2Z-JEW"/>
-                <constraint firstItem="lCK-kP-XA0" firstAttribute="leading" secondItem="AkM-DE-7L6" secondAttribute="trailing" constant="8" id="oZY-fR-BV5"/>
-                <constraint firstItem="okp-xm-cxi" firstAttribute="top" secondItem="x2D-Hd-mUz" secondAttribute="top" id="pkq-Kd-qlO"/>
-                <constraint firstItem="okp-xm-cxi" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="4" id="xBj-z3-Q17"/>
-                <constraint firstItem="AkM-DE-7L6" firstAttribute="firstBaseline" secondItem="lCK-kP-XA0" secondAttribute="firstBaseline" id="yTr-Tu-Etw"/>
-                <constraint firstItem="AkM-DE-7L6" firstAttribute="top" secondItem="lCK-kP-XA0" secondAttribute="top" id="yr8-gw-2Rx"/>
-            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="-1202.4000000000001" y="-39.580209895052477"/>
         </view>
